// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteContent should render and be centered 1`] = `
<div
  className="remoteContent centered"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div> Test html </div>",
    }
  }
/>
`;

exports[`RemoteContent should render and not be centered 1`] = `
<div
  className="remoteContent"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div> Test html </div>",
    }
  }
/>
`;
